k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: registry.gitlab.com/pmisi/docker-multi/server:dev-v1
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: regcred
